# popcorn-2

./: .gitignore  30popcorn  Cargo.toml  OVMF_CODE.fd  OVMF_VARS.fd  README.md  build.rs  config.toml  crates.js  help.html  index.html  pop.py  rust-toolchain.toml  search-index.js  settings.html  src-files.js  x86_64-unknown-popcorn.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: tracking-issue.md
.github/workflows/: build_and_test.yml  docs.yml
bitmap_allocator/: Cargo.toml
bitmap_allocator/src/: lib.rs
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/lvgl/: lv_conf.h
bootloader/src/: config.rs  elf.rs  heap.rs  loadingscreen.rs  logging.rs  main.rs  paging.rs
bootloader/src/framebuffer/: graphical.rs  mod.rs  text.rs
bootloader/src/ui/: loading.rs  mod.rs
builder/: Cargo.toml
builder/src/: config.rs  lib.rs  main.rs  partitions.rs
dep_mod_test/: Cargo.toml
dep_mod_test/src/: lib.rs
elf/: Cargo.toml
elf/src/: dynamic_table.rs  lib.rs  relocation.rs  string_table.rs  symbol_table.rs  utils.rs
elf/src/header/: file.rs  mod.rs  program.rs
elf/tests/: foo.rs
esp/: NvVars
esp/efi/boot/: bootx64.efi
esp/efi/popcorn/: allocator.kmod  config.toml  hal_amd64.kmod  logo.tga
fonts/: cursor.c  fonts.h  open_sans_48.c  quicksand_200.c  quicksand_256.c  sf_symbols_48.c
hal/hal_amd64/: Cargo.toml  build.rs
hal/hal_amd64/src/: gdt.rs  idt.rs  lib.rs  tss.rs
kernel/: Cargo.toml  build.rs  build.rs.bak.rs  grub.cfg
kernel/.cargo/: config.toml
kernel/src/: bmp.rs  cli.rs  interrupts.rs  lib.rs  logging.rs  main.rs  mmio.rs  multiboot.rs  panicking.rs  projection.rs  test_harness.rs  timing.rs
kernel/src/acpi/: mod.rs
kernel/src/arch/amd64/: linker.ld  linker_module.ld
kernel/src/hal/: exception.rs  mod.rs  timing.rs
kernel/src/hal/acpi/: ioapic.rs  mod.rs
kernel/src/hal/arch/: hpet.rs  mod.rs
kernel/src/hal/arch/amd64/: gdt.rs  idt.rs  interrupts.rs  mod.rs  paging.rs  pic.rs  qemu.rs  serial.rs  tss.rs
kernel/src/hal/arch/amd64/paging2/: mod.rs  table.rs
kernel/src/hal/arch/apic/: ioapic.rs  mod.rs  register.rs  timer.rs
kernel/src/hal/arch/hpet/: mod.rs  timer.rs
kernel/src/hal/paging/: levels.rs  mod.rs
kernel/src/hal/paging2/: mod.rs
kernel/src/io/: serial.rs
kernel/src/memory/: allocator_tools.rs  mod.rs  paging.rs  paging3.rs  physical.rs  virtual.rs  watermark_allocator.rs
kernel/src/memory/heap/: mod.rs
kernel/src/memory/paging/: mod.rs
kernel/src/resource/: background_zeroer.rs  mod.rs  watermark_allocator.rs
kernel/src/sync/: late_init.rs  mod.rs  spinlock.rs
kernel/src/task/: executor.rs  mod.rs
kernel/src/test_harness/: junit.rs  mod.rs  pretty.rs
kernel/src/threading/: mod.rs  scheduler.rs
kernel_api/: Cargo.toml  all.html  attr.module_export.html  index.html  sidebar-items.js
kernel_api/memory/: index.html  sidebar-items.js  struct.AllocError.html  struct.Frame.html  struct.Page.html  struct.PhysicalAddress.html  struct.VirtualAddress.html
kernel_api/memory/allocator/: enum.AlignedAllocError.html  enum.ZeroAllocError.html  index.html  sidebar-items.js  struct.AllocationMeta.html  struct.Config.html  trait.BackingAllocator.html  type.AllocError.html
kernel_api/memory/heap/: fn.adjust_heap.html  index.html  sidebar-items.js  trait.Heap.html
kernel_api/memory/mapping/: index.html  struct.Mapping.html
kernel_api/memory/virtual/: index.html  sidebar-items.js  trait.VirtualAllocator.html
kernel_api/src/: bridge.rs  lib.rs  ptr.rs  time.rs
kernel_api/src/memory/: allocator.rs  heap.rs  mapping.rs  mod.rs  physical.rs  type_ops.rs  virtual.rs
kernel_api/src/sync/: mod.rs  mutex.rs  once.rs  rwlock.rs
kernel_api/sync/: index.html  sidebar-items.js  struct.LazyLock.html  struct.Once.html  struct.OnceLock.html  type.Mutex.html  type.MutexGuard.html  type.RwLock.html  type.RwReadGuard.html  type.RwUpgradableReadGuard.html  type.RwWriteGuard.html  type.Spinlock.html  type.SpinlockGuard.html
kernel_api/sync/mutex/: type.Mutex.html  type.MutexGuard.html  type.Spinlock.html  type.SpinlockGuard.html
kernel_api/sync/once/: struct.LazyLock.html  struct.Once.html  struct.OnceLock.html
kernel_api/sync/rwlock/: type.RwLock.html  type.RwReadGuard.html  type.RwUpgradableReadGuard.html  type.RwWriteGuard.html
kernel_default_heap/: Cargo.toml
kernel_default_heap/src/: lib.rs
kernel_exports/: Cargo.toml
kernel_exports/src/: bridge.rs  lib.rs  macros.rs  memory.rs  sync.rs
kernel_exports/src/sync/: mutex.rs  rwlock.rs
kernel_hal/: Cargo.toml
kernel_hal/src/: lib.rs
kernel_hal/src/amd64/: idt.rs  mod.rs  port.rs  serial.rs
kernel_hal/src/arch/: mod.rs
kernel_hal/src/paging/: levels.rs  mod.rs
kernel_hal/src/paging2/: mod.rs
kernel_module_macros/: Cargo.toml
kernel_module_macros/src/: lib.rs
lvgl2/: Cargo.toml
lvgl2/src/: display_driver.rs  font.rs  lib.rs  misc.rs
lvgl2/src/display/: buffer.rs  driver.rs  mod.rs
lvgl2/src/input/: encoder.rs  mod.rs  pointer.rs
lvgl2/src/object/: button.rs  group.rs  image.rs  label.rs  mod.rs  spinner.rs  style.rs  textarea.rs
lvgl2/src/object/layout/: flex.rs  mod.rs
macros/: Cargo.toml
macros/.cargo/: config.toml
macros/src/: lib.rs
macros/tests/: init.rs
mm/dmm/slab_allocator/: Cargo.toml
mm/pmm/bitmap_memory_allocator/: Cargo.toml  build.rs
paging-macros/: Cargo.toml
paging-macros/src/: lib.rs
popfs/: Cargo.toml
popfs/src/: uefi.rs
psf/: Cargo.toml
psf/src/: lib.rs
ranged_btree/: Cargo.toml
ranged_btree/src/: lib.rs
ranged_btree_allocator/: Cargo.toml
ranged_btree_allocator/src/: lib.rs
src/: main.rs  memory.rs
src/io/: serial.rs
src/kernel_api/: lib.rs.html
src/kernel_api/memory/: allocator.rs.html  (+5 more)
src/sync/: late_init.rs  spinlock.rs
symbol_formatter/: Cargo.toml
symbol_formatter/src/: main.rs
targa/: Cargo.toml
targa/src/: errors.rs  header.rs  lib.rs  pixel.rs
targa/tests/: check.tga  image_parse.rs
test_harness/src/: lib.rs
ui/src/: image.rs  lib.rs  pixel.rs  rect.rs  window.rs
utils/: Cargo.toml
utils/src/: handoff.rs  lib.rs  paging.rs
(+53 files in other folders)
