[workspace]
members = [
	"kernel",
	"bootloader",
	"utils",
	"psf",
	"targa",
	"mm/pmm/bitmap_memory_allocator",
	"ranged_btree",
	"kernel_exports",
	"kernel_module_macros",
	"hal/hal_amd64",
	"elf",
	"mm/dmm/slab_allocator",
]

[profile.release]
panic = 'abort'

[profile.release-with-debug]
inherits = "release"
debug = true
panic = 'unwind'

[profile.release-small]
inherits = "release"
opt-level = "z"
