[package]
name = "popcorn2"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]
members = [
	"builder",
	"kernel",
	"bootloader",
	"utils",
	"psf",
	"targa",
	"mm/pmm/bitmap_memory_allocator",
	"ranged_btree",
	"kernel_exports",
	"kernel_module_macros",
	"hal/hal_amd64",
	"elf",
	"mm/dmm/slab_allocator",
	"macros",
	"popfs",
	"kernel_api",
]

[build-dependencies]
builder = { path = "builder" }
bootloader = { path = "bootloader", artifact = "bin", target = "x86_64-unknown-uefi" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
popfs = { path = "popfs", artifact = "bin:popfs_uefi_driver", target = "x86_64-unknown-uefi" }

[profile.dev]
panic = 'abort'
rustflags = ["-C", "symbol-mangling-version=v0"]

[profile.release]
panic = 'abort'
rustflags = ["-C", "symbol-mangling-version=v0"]

[profile.dev.package.popfs]
rustflags = [
	"-Z", "pre-link-args=/subsystem:efi_boot_service_driver"
]

[profile.release.package.popfs]
rustflags = [
	"-Z", "pre-link-args=/subsystem:efi_boot_service_driver"
]

[profile.dev.package.kernel]
rustflags = [
	"-C", "panic=unwind",
	"-C", "link-args=-Tkernel/src/arch/amd64/linker.ld",
	"-C", "link-args=-export-dynamic",
	"-Z", "export-executable-symbols=on",
	"-C", "relocation-model=static",
	"-C", "force-frame-pointers=y",
	"-C", "force-unwind-tables=y"
]

[profile.release.package.kernel]
rustflags = [
	"-C", "panic=unwind",
	"-C", "link-args=-Tkernel/src/arch/amd64/linker.ld",
	"-C", "link-args=-export-dynamic",
	"-Z", "export-executable-symbols=on",
	"-C", "relocation-model=static",
	"-C", "force-frame-pointers=y",
	"-C", "force-unwind-tables=y"
]

[profile.test.package.kernel]
rustflags = [
	"-C", "panic=unwind",
	"-C", "link-args=-Tkernel/src/arch/amd64/linker.ld",
	"-C", "link-args=-export-dynamic",
	"-Z", "export-executable-symbols=on",
	"-C", "relocation-model=static",
	"-C", "force-frame-pointers=y",
	"-C", "force-unwind-tables=y",
	"--test"
]

[profile.release-debug]
inherits = "release"
debug = "full"
