[package]
name = "popcorn2"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]
members = [
	"builder",
	"kernel",
	"bootloader",
	"utils",
	"psf",
	"targa",
	"mm/pmm/bitmap_memory_allocator",
	"ranged_btree",
	"kernel_module_macros",
	"hal/hal_amd64",
	"elf",
	"mm/dmm/slab_allocator",
	"macros",
	"lvgl2",
	"popfs",
	"kernel_api",
]

[profile.release-debug]
inherits = "release"
debug = "full"
