[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.3.1", features = [] }
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_debug"] }
utils = { path = "../utils" }
#kernel_exports = { path = "../kernel_exports", default-features = false, features = ["smp"] }
kernel_api = { version = "0.1.0", path = "../kernel_api" }
derive_more = "0.99.17"

kernel_hal = { path = "../kernel_hal" }

#[target.'cfg(panic = "unwind")'.dependencies]
unwinding = { version = "0.2.1", default-features = false, features = ["unwinder", "panic", "personality", "fde-static"] }

kernel_default_heap = { path = "../kernel_default_heap" }
bitmap_allocator = { path = "../bitmap_allocator" }
ranged_btree_allocator = { version = "0.1.0", path = "../ranged_btree_allocator" }

[dev-dependencies]
minicov = "0.3"
test = { path = "../test_harness" }

[features]
default = []
junit_test_out = []
