[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.3.1", features = [] }
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_debug"] }
utils = { path = "../utils" }
#kernel_exports = { path = "../kernel_exports", default-features = false, features = ["smp"] }
kernel_api = { version = "0.1.0", path = "../kernel_api" }
derive_more = "0.99.17"

#[target.'cfg(panic = "unwind")'.dependencies]
unwinding = { git = "https://github.com/nbdd0121/unwinding.git", rev = "d7cd46e", default-features = false, features = ["unwinder", "panic", "personality", "fde-static"] }

kernel_default_heap = { path = "../kernel_default_heap" }
bitmap_allocator = { path = "../bitmap_allocator" }
ranged_btree_allocator = { version = "0.1.0", path = "../ranged_btree_allocator" }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
acpi = {  version = "5.0.0", default-features = false }
bit_field = "0.10.2"
paste = "1.0.14"
num_enum = { version = "0.7.2", default-features = false }
macros = { path = "../macros" }
ranged_btree = { path = "../ranged_btree" }
minicov = { version = "0.3", optional = true }

[dev-dependencies]
minicov = "0.3"
test = { path = "../test_harness" }

[features]
default = []
junit_test_out = []
