[package]
name = "kernel_exports"
version = "0.1.0"
edition = "2021"

[features]
test = ["kernel_module_macros/test"]
default = ["panic", "alloc"]
panic = []
alloc = []
smp = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
derive_more = "0.99.17"
kernel_module_macros = { path = "../kernel_module_macros" }
