[package]
name = "ranged_btree_allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_api = { path = "../kernel_api" }
ranged_btree = { path = "../ranged_btree" }

[dev-dependencies]
kernel_api = { path = "../kernel_api", features = ["use_std"] }
